style.css
h1 {
  text-align: center;
}

#displayBoard {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  height: 85vh;
}

.grid-row {
  display: flex;
  justify-content: space-between;
  flex-grow: 1;
  border: 1px solid #cf1414;
  box-sizing: border-box;
}
.grid-column {
  flex-grow: 1;
  min-width: 100px;
  min-height: 100px;
  border: 1px solid #0d0dd0;
  box-sizing: border-box;
}

